# test-solidity-in-rust

./: README.md
mycontractproject/: .gitignore  package-lock.json  package.json
mycontractproject/forge_tests/: Cargo.toml
mycontractproject/forge_tests/src/: forge.rs  lib.rs  my_contract.rs
mycontractproject/src/: MyContract.sol
mycontractproject/test/: Contract.t.sol
